cmake_minimum_required(VERSION 3.31)
project(luogu)

set(CMAKE_CXX_STANDARD 20)

add_executable(luogu U300331.cpp
        U300333.cpp
        U300336.cpp
        U300329.cpp
        U301629.cpp
        U301632.cpp
        U306965.cpp
        P1464.cpp
        P1596.cpp
        U303042.cpp
        P1825.cpp
        AT_abc383_c.cpp
        P1588.cpp
        AT_abc405_d.cpp
        U303045.cpp
        P14360.cpp
        P14357.cpp
        U308328.cpp
        U308329.cpp
        P14358.cpp
        U308330.cpp
        U308331.cpp
        P2367.cpp
        AT_abc408_c.cpp
        B4192.cpp
        P5117.cpp
        AT_abc356_c.cpp
        AT_abc367_c.cpp
        B3623.cpp
        U303047.cpp
        U303046.cpp
        P2036.cpp
        P1706.cpp
        U303048.cpp
        B3643.cpp
        T320770.cpp
        T320773.cpp
        T320774.cpp
        T320772.cpp
        T320791.cpp
        U282420.cpp
        AT_abc389_c.cpp
        AT_abc404_C.cpp
        P1330.cpp
        U433472.cpp
        AT_abc270_c.cpp
        B4016.cpp
        AT_abc361_e.cpp
        P11378.cpp
        "atcoder abc 435/AT_abc435_a.cpp"
        "atcoder abc 435/AT_abc435_b.cpp"
        "atcoder abc 435/AT_abc435_c.cpp"
        "atcoder abc 435/AT_abc435_d.cpp"
        "atcoder abc 435/AT_abc435_e.cpp"
        P10722.cpp
        P10109.cpp
        P11962.cpp
        P10378.cpp
        P13016.cpp
        P14076.cpp
        P14077.cpp
        U628622.cpp
        P1144.cpp
        AT_abc376_d.cpp
        U554341.cpp
        U445086.cpp
        "atcoder abc 436/AT_abc436_a.cpp"
        "atcoder abc 436/AT_abc436_b.cpp"
        "atcoder abc 436/AT_abc436_c.cpp"
        "atcoder abc 436/AT_abc436_d.cpp"
        P5663.cpp
        P10723.cpp
        "atcoder abc 437/AT_abc437_A.cpp"
        "atcoder abc 437/AT_abc437_b.cpp"
        "atcoder abc 437/AT_abc437_c.cpp"
        "atcoder abc 437/AT_abc437_d.cpp"
        P1216.cpp
        U509740.cpp
        AT_dp_c.cpp
        AT_abc365_d.cpp
        AT_dp_d.cpp
)
